--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uncurrify",
   "version": "1.0.0",
-  "description": "uncurry function that was carried before",
+  "description": "uncurry function that was curried before",
   "main": "lib/uncurrify.js",
   "scripts": {
     "test": "tape test/*.js",
