--- a/.jscsrc
+++ b/.jscsrc
@@ -4,16 +4,16 @@
     "requireCapitalizedConstructors": false,
     "disallowTrailingWhitespace": "ignoreEmptyLines",
     "disallowTrailingComma": false,
+    "disallowUnusedVariables": true,
     "validateIndentation": false,
     "requireCurlyBraces": false,
     "requireVarDeclFirst": false,
     "requireMultipleVarDecl": false,
+    "requireUseStrict": true,
     "requireSpacesInAnonymousFunctionExpression": {
         "beforeOpeningCurlyBrace": true
     },
     "excludeFiles": [
-        "node_modules/**",
-        "modules/**",
-        "bower_components/**"
+        "node_modules/**"
     ]
 }
