--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "6to5": "babel -d lib src",
     "wisdom": "npm run build",
     "jscs-fix": "jscs --esnext test src --fix",
+    "lint": "jscs --esnext test src",
     "clean": "rimraf lib/* dist/*",
     "bundle:base": "browserify -s uncurrify --ng false",
     "bundle": "npm run bundle:base -- -r ./lib/uncurrify.js:uncurrify ./lib/uncurrify.js -o dist/uncurrify.js",
@@ -35,7 +36,7 @@
     "babel-cli": "^6.1.1",
     "babel-preset-es2015": "^6.0.15",
     "browserify": "^13.0.0",
-    "jscs": "^2.4.0",
+    "jscs": "^3.0.3",
     "npm-run-all": "^1.2.12",
     "rimraf": "^2.4.3",
     "tape": "^4.2.0"
