--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/uncurrify.js",
   "scripts": {
     "test": "tape test/*.js",
-    "build": "npm-run-all clean 6to5 bundle bundle:es6 minify",
+    "build": "redrun clean 6to5 bundle bundle:es6 minify",
     "minify": "minify dist/uncurrify.js > dist/uncurrify.min.js",
     "6to5": "babel -d lib src",
     "wisdom": "npm run build",
@@ -37,7 +37,7 @@
     "babel-preset-es2015": "^6.0.15",
     "browserify": "^13.0.0",
     "jscs": "^3.0.3",
-    "npm-run-all": "^1.2.12",
+    "redrun": "^3.0.0",
     "rimraf": "^2.4.3",
     "tape": "^4.2.0"
   }
