--- a/package.json
+++ b/package.json
@@ -4,18 +4,9 @@
   "description": "uncurry function that was curried before",
   "main": "lib/uncurrify.js",
   "scripts": {
-    "test": "tape test/*.js",
-    "build": "redrun clean 6to5 bundle bundle:es6 minify",
-    "minify": "minify dist/uncurrify.js > dist/uncurrify.min.js",
-    "6to5": "babel -d lib src",
-    "wisdom": "npm run build",
-    "jscs-fix": "jscs --esnext test src --fix",
-    "lint": "jscs --esnext test src",
-    "clean": "rimraf lib/* dist/*",
-    "bundle:base": "browserify -s uncurrify --ng false",
-    "bundle": "npm run bundle:base -- -r ./lib/uncurrify.js:uncurrify ./lib/uncurrify.js -o dist/uncurrify.js",
-    "bundle:es6:base": "npm run bundle:base -- -r ./src/uncurrify.js:uncurrify ./src/uncurrify.js",
-    "bundle:es6": "npm run bundle:es6:base -- -o dist/uncurrify.es6.js"
+    "test": "madrun test",
+    "lint": "madrun lint",
+    "fix:lint": "madrun fix:lint"
   },
   "repository": {
     "type": "git",
@@ -32,13 +23,15 @@
     "url": "https://github.com/coderaiser/uncurrify/issues"
   },
   "homepage": "https://github.com/coderaiser/uncurrify",
+  "engines": {
+    "node": ">=4"
+  },
   "devDependencies": {
-    "babel-cli": "^6.1.1",
-    "babel-preset-es2015": "^6.0.15",
-    "browserify": "^16.0.0",
-    "jscs": "^3.0.3",
-    "redrun": "^6.0.0",
-    "rimraf": "^2.4.3",
-    "tape": "^4.2.0"
+    "eslint": "^7.12.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-putout": "^5.2.0",
+    "madrun": "^7.0.4",
+    "putout": "^10.2.1",
+    "supertape": "^2.0.1"
   }
 }
