--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,10 @@
 {
-     "parserOptions": {
+    "parserOptions": {
         "ecmaVersion": 2021
     },
     "extends": [
-        "plugin:putout/recommended",
-        "plugin:node/recommended"
+        "plugin:node/recommended",
+        "plugin:putout/recommended"
     ],
     "plugins": [
         "putout",
