--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^6.8.1",
     "madrun": "^8.0.2",
-    "putout": "^11.15.0",
-    "supertape": "^3.6.1"
+    "putout": "^12.0.0",
+    "supertape": "^3.6.1",
+    "try-catch": "^3.0.0"
   }
 }
