--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "madrun test",
     "lint": "madrun lint",
-    "fix:lint": "madrun fix:lint"
+    "fix:lint": "madrun fix:lint",
+    "coverage": "madrun coverage"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-putout": "^6.8.1",
     "madrun": "^8.0.2",
+    "nyc": "^15.1.0",
     "putout": "^12.0.0",
     "supertape": "^3.6.1",
     "try-catch": "^3.0.0"
